--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   },
   "author": "XinPing Wang",
   "license": "MIT",
+  "dependencies": {
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3"
+  },
   "devDependencies": {
     "electron": "^3.0.9",
     "typescript": "^3.1.6"
